# tapo_p110_ev_charger

./: .gitignore  README.md  build.sh  check_code.sh  install.py  pyproject.toml
linux/: tapo_p110_ev_charger-0.0.8-py3-none-any.whl  tapo_p110_ev_charger-0.0.9-py3-none-any.whl  tapo_p110_ev_charger-0.0.92-py3-none-any.whl  tapo_p110_ev_charger-0.0.93-py3-none-any.whl  tapo_p110_ev_charger-0.0.95-py3-none-any.whl
src/tapo_p110_ev_charger/: tapo_p110_ev_charger.py  tapo_p110_ev_charger_gui.py
tests/: test_tapo_p110_ev_charger.py
